# AI_Governance_map

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  app.py  italy_ai_governance_heatmap_v3.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  ingest.yml
.streamlit/: config.toml
data/: actors.csv  entities.yaml  impact_flags.csv  overrides.json  regulation_data.csv  scores.csv  summaries.jsonl
data/raw/: README.md
src/ai_gov_map/: __init__.py  dashboard.py  ingest.py  scoring.py
src/ai_gov_map/confidence/: __init__.py  __main__.py  heuristics.py
src/ai_gov_map/ingest/: __init__.py  __main__.py  eurlex.py  gdelt.py  http_util.py  models.py  normalize.py  oecd.py  rss_sources.py
src/ai_gov_map/match/: __init__.py  __main__.py  load.py  matcher.py  models.py  store.py  taxonomy.py
src/ai_gov_map/overrides/: __init__.py  __main__.py  models.py  store.py
src/ai_gov_map/summarise/: __init__.py  __main__.py  backends.py  models.py  prompt.py  store.py
tests/: test_confidence.py  test_dashboard.py  test_ingest.py  test_match.py  test_scoring.py  test_summarise.py
