[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-gov-map"
version = "0.1.0"
description = "Italy / EU AI governance capacity map and regulatory compliance monitor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit==1.41.1",
    "pandas==2.2.3",
    "numpy==2.2.1",
    "matplotlib==3.10.0",
    "seaborn==0.13.2",
    "plotly==5.24.1",
    "requests==2.32.3",
    "feedparser==6.0.11",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
